[package]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
categories = ["embedded", "external-ffi-bindings"]
description = "Unsafe bindings to the Bosch BSEC library"
edition = "2018"
keywords = ["BSEC", "bindings"]
license = "MIT OR Apache-2.0"
name = "libalgobsec-sys"
readme = "README.md"
repository = "https://github.com/jgosmann/libalgobsec-sys"
version = "0.3.0+1.4.8.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.1"

[build-dependencies]
bindgen = "0.63.0"
